--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-akana-policy",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Yeoman Akana Custom Policy generator",
   "license": "UNLICENSED",
   "main": "app/index.js",
@@ -14,7 +14,7 @@
     "test": "mocha"
   },
   "files": [
-    "app",
+    "generators/app",
     "generators/handler",
     "generators/meta",
     "generators/build",
