--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "generator-akana-policy",
   "version": "1.0.4",
   "description": "Yeoman Akana Custom Policy generator",
-  "license": "UNLICENSED",
-  "main": "app/index.js",
+  "license": "Apache-2.0",
+  "main": "generators/app/index.js",
   "repository": "akanainc/generator-akana-policy",
   "author": {
     "name": "Ashish Vaid",
