--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "generators/template"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "akana",
+    "api-gateway"
   ],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
